# general-simulation

./: .env.example  ADD_DOMAIN.md  BUILD_PLAN.md  Makefile  README.md  compose.yaml  pyproject.toml  run.yaml
deploy/app/: Containerfile
deploy/archived/llamastack/: build.yaml
deploy/archived/llamastack-helm/: Chart.yaml  values.yaml
deploy/helm/api/: Chart.yaml  values.yaml
deploy/helm/bootstrap/: Chart.yaml  values.yaml
deploy/helm/ingestion/: Chart.yaml  values.yaml
deploy/helm/llamastack/: values.yaml
deploy/helm/postgres/: Chart.yaml  values.yaml
deploy/helm/vllm/: Chart.yaml  values.yaml
deploy/llamastack/: build.yaml  run.yaml
deploy/openshift/: namespace.yaml
deploy/openshift/api/: deployment.yaml  route.yaml  service.yaml
deploy/openshift/bootstrap/: job.yaml
deploy/openshift/ingestion/: cronjob.yaml
deploy/postgres/: Containerfile  Containerfile.cnpg
src/api/: app.py  deps.py  health.py  query.py
src/core/: config.py  db.py  ingestion.py  solver.py
src/graph/: bootstrap.py  cypher.py  events.py  nodes.py
src/ingestion/: __main__.py  runner.py  tool.py
src/llamastack/: __init__.py  base.py  client.py  factory.py  fake.py  types.py
src/llm/: base.py  factory.py  fake.py  llamastack_client.py  openai_client.py  types.py
src/reasoning/: pipeline.py  stage1.py  stage2.py  stage3.py  types.py
src/solver/: __init__.py  stub.py  tool.py
tests/: test_bootstrap.py  test_graph.py  test_health.py  test_ingestion.py  test_llamastack.py  test_llm.py  test_pipeline.py  test_solver.py
tests/fixtures/: usgs_earthquakes.json
(+38 files in other folders)
