[project]
name = "general-simulation"
version = "0.1.0"
description = "Domain-agnostic simulation & impact-reasoning platform (MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "fire>=0.7.1",
    "httpx>=0.28.1",
    "openai>=1.0",
    # Uncomment to re-enable the Llama Stack SDK backend (LLM_BACKEND=llamastack):
    # "llama-stack-client>=0.2.12",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
bootstrap-schema = "src.graph.bootstrap:main"
ingest-run = "src.ingestion.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
